2008-05-01  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR libfortran/36094
	* runtime/error.c (show_locus): Provide modified error message when
	filename has not yet been associated with a unit number.
	* io/open.c (encoding_opt[]): Comment out "utf-8" option and add TODO.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@134876 138bc75d-0d04-0410-961f-82ee72b054a4